# raucous-wart

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  animation.py  cmake.bash  cmake_release.bash  compile_commands.json  gpt_json.py  llm_responses.json  llm_responses2.json  llm_responses4.json  main.cpp  out.txt
.run/: main.run.xml
cmake/: Findspdlog.cmake
include/: bvh.hpp  camera.hpp  error.hpp  image.hpp  input.hpp  intersection.hpp  light.hpp  material.hpp  random.h  ray.hpp  raytracer.hpp  renderer.hpp  scene.hpp  shape.hpp  stbi_image.h  transform.hpp  vector.hpp
materials/: Martini2.ppm  ambient.json  earth.ppm  llm.md  mirror_test.json  mirror_test2.json  ots.ppm  pathtracer.json  pathtracer2.json  rth.ppm  scene.json  simple_phong.json  simple_phong_refraction.json  test.json  vw.ppm:Zone.Identifier  vwvwvw.ppm  wvw.ppm
materials/Animation/: max_val.py
materials/Animation/Images/: frame_8.ppm
materials/Animation/Scene/: frame_0.json  frame_000.json  frame_001.json  frame_002.json  frame_003.json  frame_004.json  frame_005.json  frame_006.json  frame_007.json  frame_008.json  frame_009.json  frame_010.json  frame_011.json  frame_012.json  frame_013.json  frame_014.json  frame_015.json  frame_016.json  frame_017.json  frame_018.json  frame_019.json  frame_020.json  frame_021.json  frame_022.json  frame_023.json  frame_024.json  frame_025.json  frame_026.json  frame_027.json  frame_028.json  frame_029.json  frame_030.json  frame_031.json  frame_032.json  frame_033.json  frame_034.json  frame_035.json  frame_036.json  frame_037.json  frame_038.json  (+160 more)
src/: CMakeLists.txt  bvh.cpp  camera.cpp  image.cpp  input.cpp  light.cpp  material.cpp  ray.cpp  raytracer.cpp  renderer.cpp  scene.cpp  shape.cpp  vector.cpp
